# py-wrong-opinions

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 51cbe403ade8_initial_schema_with_all_models.py  6e9096df251a_add_person_movie_cast_and_crew_models.py  80c776c19bdb_add_artist_and_album_artist_tables.py  a1b2c3d4e5f6_initial_schema.py  b2c3d4e5f6g7_make_week_user_id_nullable.py
migrations/versions/archived/: 4bb3bc1dc788_make_weeks_globally_unique_per_calendar_.py
scripts/: test_api.sh
src/wrong_opinions/: __init__.py  config.py  database.py  main.py
src/wrong_opinions/api/: __init__.py  albums.py  auth.py  movies.py  router.py  weeks.py
src/wrong_opinions/models/: __init__.py  album.py  artist.py  movie.py  person.py  user.py  week.py
src/wrong_opinions/schemas/: __init__.py  album.py  external.py  movie.py  user.py  week.py
src/wrong_opinions/services/: __init__.py  base.py  musicbrainz.py  tmdb.py
src/wrong_opinions/utils/: security.py
tests/: __init__.py  conftest.py
tests/test_api/: test_albums.py  test_auth.py  test_health.py  test_movies.py  test_weeks.py
tests/test_services/: test_musicbrainz.py  test_tmdb.py
